--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-primary">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+    <style>
+			body {
+				background-color: #1E201E;
+				color: #ECDFCC;
+			}
+    </style>
   </head>
   <body>
     <div id="app"></div>
