Enhance UI and functionality of navigation bar
Replace logo, add toggleable search bar, and update styles. Refactor code for improved readability and consistency with new design.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-primary">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Liquid Vanilla - Recipe Database</title>
     <style>
-			body {
-				background-color: #111111;
-				color: #ECDFCC;
-        font-family: 'Raleway', sans-serif;
-			}
+      html.dark {
+        transition: all 0.3s ease;
+      }
     </style>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="bg-primary text-light"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
